--- a/saves/Hard/KCT_Settings.cfg
+++ b/saves/Hard/KCT_Settings.cfg
@@ -32,6 +32,7 @@ KCT_Preset
 		ReconditioningEffect = 576
 		MaxReconditioning = 1350000000
 		RolloutReconSplit = 0.75
+		MergingTimePenalty = 0.050000000000000003
 	}
 	KCT_Preset_Formula
 	{
@@ -54,6 +55,16 @@ KCT_Preset
 		RushCostFormula = ([TC]+((max(0,2000-[TC]))^0.9))*(1.15^[RC])
 		AirlaunchCostFormula = [E]*0.25
 		AirlaunchTimeFormula = [BP]*0.25
+		EngineRefurbFormula = 0.5*(1+max(0,1-([RT]/10)))
+		YearBasedRateMult
+		{
+			key = -15 0.1 0 0.04
+			key = -5 0.5 0.0825 0.0825
+			key = -1 1 0.0625 0
+			key = 0 1 0 0.08
+			key = 5 1.8 0.115 0.115
+			key = 15 2.5 0.07 0.07
+		}
 	}
 	KCT_Preset_Part_Variables
 	{
@@ -70,6 +81,8 @@ KCT_Preset
 			MMH = 1.1000000000000001
 			UH25 = 1.3500000000000001
 			Aniline = 1.2
+			Aniline22 = 1.2
+			Aniline37 = 1.2
 		}
 		Global_Variables
 		{
